tests/cases/parser/misc/non_existant_import.stderr
error: couldn't import `does_not_exist`, module couldn't be found
 --> $DIR/non_existant_import.hash:3:6
2 |   
3 |   k := import("does_not_exist");
  |        ^^^^^^^^^^^^^^^^^^^^^^^^ 
