tests/cases/parser/misc/non_existant_import.hash
// run=fail, stage=parse

k := import("does_not_exist");
